Allow dash-case; import then re-export; Add note
Update tests

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   ],
   "license": "BSD-3-Clause",
   "main": "./dist/index.js",
-  "name": "create-index",
+  "name": "create-index-2",
   "repository": {
     "type": "git",
     "url": "https://github.com/gajus/create-index"
